--- a/puffin_macro/Cargo.toml
+++ b/puffin_macro/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
-name = "puffin"
+name = "puffin_macro"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+proc-macro = true
+
 [dependencies]
-thiserror = "1.0"
-colored = "2.0"
-tracing = "0.1"
-ahash = "0.8"
-ropey = "1.5"
-puffin_macro = { path = "../puffin_macro"}
+proc-macro2 = "1.0"
+syn = { version = "1.0", features = ["full"]}
+quote = "1.0"
